View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030939 | Open CASCADE | OCCT:DRAW | public | 2019-09-04 09:39 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Ubuntu 18.04 | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0030939: Draw Harness, ViewerTest - AIS_ViewCube animation does not work on Linux and macOS | ||||
Description | AIS_ViewCube calls Aspect_Window::InvalidateContent() for requesting more frames to draw animation, however this approach does not work reliably for Xw_Window in case of calling within GUI thread (in contrast to "vrepaint -continuous" emitting updates from another thread). | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box b 1 2 3 vclear vinit vdisplay -dispMode 1 b vfit vviewcube vc then click onto View Cube and doesn't move mouse. Animation does not work if mouse is in idle. | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
related to | 0030619 | closed | apn | Draw Harness, ViewerTest - add continuous rendering option to vrepaint command |
child of | 0028954 | closed | bugmaster | Visualization - implement interactive object AIS_ViewCube for camera manipulations |
child of | 0030507 | closed | bugmaster | Visualization - introduce AIS_ViewController |
|
Branch CR30939 has been created by kgv. SHA-1: 93908173501ae97f6f0097d0980b9dbb2a1a3929 Detailed log of new commits: Author: kgv Date: Sat Jun 20 17:48:52 2020 +0300 0030939: Draw Harness, ViewerTest - AIS_ViewCube animation does not work on Linux and macOS ViewerTest_EventManager::handleViewRedraw() now starts ViewerTest_ContinuousRedrawer working thread to workaround Tcl event loop invalidation issue. |
|
Patch is ready for review in OCCT branch CR30939. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30939-master-KGV/ |
|
Dear Kirill several points for this patch: 1. why ViewerTest_ContinuousRedrawer instance is in ViewerTest package? As, the issue relates to AIS_ViewCube, might it be useful out of only Tcl draw tests? 2. Could you please, if possible, extend description of ViewerTest_ContinuousRedrawer class to know in what cases it's worth using it? 3. Test case to reproduce the issue is absent in the provided fix, though mentioned in the issue. |
|
Branch CR30939 has been updated forcibly by kgv. SHA-1: 42efb1f5cfc30cb6fa6831101d1c1f07777f228a |
|
Branch CR30939 has been updated forcibly by kgv. SHA-1: 0a9e02a65f781c0b319d7270bffa3a342f4ab5d8 |
|
> 1. ...issue relates to AIS_ViewCube, might it be useful out of only Tcl draw tests? The issue is specific to Draw Harness due to broken message loop handler implied by Tcl/Tk integration. In well-defined message loop GUI applications should not experience similar problem. > 2. extend description of ViewerTest_ContinuousRedrawer class Pushed. > 3. Test case Draw Harness currently does not provide mechanisms for GUI tests, and this issue can be reproduced only interactively. |
|
Branch CR30939 has been updated forcibly by kgv. SHA-1: 218430161317a7b9eb965ab05f145559d7b9bdfa |
|
Combination - OCCT branch : IR-2020-06-26 master SHA - 832a6f4412321ca784bbb36916dc740d04a05c0c a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-06-26 SHA - 180ab3ca4e501bda3da57c99a8ac8b220db33df3 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17164.36000000016 / 17160.400000000114 [+0.02%] Products Total CPU difference: 11173.720000000081 / 11197.400000000112 [-0.21%] Windows-64-VC14: OCCT Total CPU difference: 18707.65625 / 18650.578125 [+0.31%] Products Total CPU difference: 13062.6875 / 13012.71875 [+0.38%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30939 has been deleted by inv. SHA-1: 218430161317a7b9eb965ab05f145559d7b9bdfa |
occt: master 08b7a39f 2020-06-20 14:48:52 Committer: bugmaster Details Diff |
0030939: Draw Harness, ViewerTest - AIS_ViewCube animation does not work on Linux and macOS ViewerTest_EventManager::handleViewRedraw() now starts ViewerTest_ContinuousRedrawer working thread to workaround Tcl event loop invalidation issue. |
Affected Issues 0030939 |
|
mod - src/ViewerTest/FILES | Diff File | ||
add - src/ViewerTest/ViewerTest_ContinuousRedrawer.cxx | Diff File | ||
add - src/ViewerTest/ViewerTest_ContinuousRedrawer.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_EventManager.cxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_EventManager.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-09-04 09:39 | kgv | New Issue | |
2019-09-04 09:39 | kgv | Assigned To | => kgv |
2019-09-04 09:39 | kgv | Relationship added | child of 0028954 |
2019-09-04 09:40 | kgv | Relationship added | child of 0030507 |
2019-09-04 09:40 | kgv | Relationship added | related to 0030619 |
2019-09-25 22:05 | abv | Target Version | 7.4.0 => 7.5.0 |
2020-06-20 17:47 | git | Note Added: 0092623 | |
2020-06-20 19:08 | kgv | Note Added: 0092625 | |
2020-06-20 19:08 | kgv | Assigned To | kgv => nds |
2020-06-20 19:08 | kgv | Status | new => resolved |
2020-06-22 14:52 | nds | Note Added: 0092655 | |
2020-06-22 14:52 | nds | Assigned To | nds => kgv |
2020-06-22 14:52 | nds | Status | resolved => assigned |
2020-06-22 15:36 | git | Note Added: 0092661 | |
2020-06-22 15:42 | git | Note Added: 0092662 | |
2020-06-22 15:43 | kgv | Note Added: 0092663 | |
2020-06-22 15:43 | kgv | Assigned To | kgv => nds |
2020-06-22 15:43 | kgv | Status | assigned => resolved |
2020-06-22 15:53 | git | Note Added: 0092664 | |
2020-06-22 16:02 | nds | Assigned To | nds => bugmaster |
2020-06-22 16:02 | nds | Status | resolved => reviewed |
2020-06-28 11:27 | bugmaster | Note Added: 0092787 | |
2020-06-28 11:27 | bugmaster | Status | reviewed => tested |
2020-06-28 11:29 | bugmaster | Test case number | => Not required |
2020-06-28 12:35 | bugmaster | Changeset attached | => occt master 08b7a39f |
2020-06-28 12:35 | bugmaster | Status | tested => verified |
2020-06-28 12:35 | bugmaster | Resolution | open => fixed |
2020-06-28 12:48 | git | Note Added: 0092806 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |