0030939: Draw Harness, ViewerTest - AIS_ViewCube animation does not work on Linux and macOS

ViewerTest_EventManager::handleViewRedraw() now starts ViewerTest_ContinuousRedrawer
working thread to workaround Tcl event loop invalidation issue.